--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "chatgpt-dalle-react",
   "version": "1.0.0",
-  "private": true,
+  "homepage": "./",
   "dependencies": {
     "gh-pages": "^6.1.1",
     "openai": "^3.2.1",
